--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "lint": "eslint src",
-    "format": "prettier --write src",
+    //"format": "prettier --write src",
     "format:check": "prettier --check src"
   }
 }
